[package]
name = "impedance"
version = "0.2.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
edition = "2018"
description = "Tools to mix blocking and async code"
documentation = "https://docs.rs/impedance"
repository = "https://github.com/guswynn/impedance"

license = "MIT OR Apache-2.0"

[features]
default = ["tokio"]

[dependencies]
once_cell = "1.7.2"
parking_lot = "0.11.1"
pin-project = "1.0.7"
tokio = { version = "1.5.0", features = ["rt", "sync"], optional = true }

[dev-dependencies]
futures = "0.3.14"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "sync"] }
