[package]
name = "impedance"
version = "0.2.4"
authors = ["Gus Wynn <guswynn@gmail.com>"]
edition = "2018"
description = "Tools to mix blocking and async code"
documentation = "https://docs.rs/impedance"
repository = "https://github.com/guswynn/impedance"

license = "MIT OR Apache-2.0"

[features]
default = ["tokio"]
async-std-futures = ["async-std", "futures"]

[dependencies]
async-std = { version = "1.9.0", features = ["unstable"], optional = true }
futures = { version = "0.3.14", optional = true }
once_cell = "1.7.2"
parking_lot = "0.11.1"
pin-project = "1.0.7"
rayon = { version = "1.5.0", optional = true }
tokio = { version = "1.5.0", features = ["rt", "sync"], optional = true }

[dev-dependencies]
futures = "0.3.14"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "sync"] }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
