[package]
name = "impedance"
version = "0.3.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
edition = "2018"
description = "Tools to mix blocking and async code"
documentation = "https://docs.rs/impedance"
repository = "https://github.com/guswynn/impedance"

license = "MIT OR Apache-2.0"

[features]
default = ["tokio"]
async-std-experimental = ["async-std", "futures"]

[dependencies]
async-std = { version = "1", features = ["unstable"], optional = true }
futures = { version = "0.3", optional = true }
once_cell = "1.7"
parking_lot = "0.11"
pin-project = "1"
rayon = { version = "1", optional = true }
thiserror = { version = "1.0.25", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[dev-dependencies]
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-std = { version = "1", features = ["unstable", "attributes"] }

[package.metadata.docs.rs]
features = ["tokio", "rayon"]
